fixing top menu breaking on tablet with new, longer menu item

--- a/assets/css/teammolde.css
+++ b/assets/css/teammolde.css
@@ -6554,6 +6554,7 @@ ul.team-nav li:hover {
     text-align: center;
     background: #fff;
     padding: 2px 12px;
+    font-size: 18px;
   }
 }
 ul.team-nav li a {
