--- a/assets/less/custom.less
+++ b/assets/less/custom.less
@@ -89,6 +89,7 @@ ul.team-nav {
 			text-align: center;
 			background: #fff;
 			padding: 2px 12px;
+			font-size: 18px;
 		}
 		a {
 			color: #000;
